--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          <div id="correctAnswers"></div>
          <div id="incorrectAnswers"></div>
          <div id="unanswered"></div>
-         <div><span id="resetBtn"></span></div>
+         <div id="resetBtn"></div>
       </div>
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
